# backend/api.yaml
@@ -13,6 +13,8 @@ paths:
     get:
       description:
         Gets a list of all available studies in the system.
+      tags:
+        - study
       responses:
         '200':
           description: A list of all available studies.
@@ -25,6 +27,8 @@ paths:
     post:
       description:
         Creates a new study in the system.
+      tags:
+        - study
       security:
         - token: [ ]
       requestBody:
@@ -44,6 +48,8 @@ paths:
     get:
       description:
         Gets a specific study by ID.
+      tags:
+        - study
       parameters:
         - name: study_id
           in: path
@@ -63,6 +69,8 @@ paths:
   /study/{study_id}/questionnaire:
     get:
       description: Gets all available ESM questionnaires for this specific study.
+      tags:
+        - esm
       parameters:
         - name: study_id
           in: path
@@ -78,11 +86,15 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/ESMFullQuestionnaire'
+                  $ref: '#/components/schemas/ESMQuestionnaire'
         '404':
           description: The study was not found.
     post:
       description: Creates a new ESM questionnaire for the study.
+      tags:
+        - esm
+      security:
+        - token: [ ]
       parameters:
         - name: study_id
           in: path
@@ -108,6 +120,8 @@ paths:
   /study/{study_id}/questionnaire/{questionnaire_id}:
     get:
       description: Gets a specific ESM questionnaire by ID.
+      tags:
+        - esm
       parameters:
         - name: study_id
           in: path
@@ -132,6 +146,10 @@ paths:
           description: The questionnaire was not found.
     put:
       description: Updates an existing ESM questionnaire.
+      tags:
+        - esm
+      security:
+        - token: [ ]
       parameters:
         - name: study_id
           in: path
@@ -163,6 +181,10 @@ paths:
   /study/{study_id}/questionnaire/{questionnaire_id}/element:
     post:
       description: Adds a new element to an existing ESM questionnaire.
+      tags:
+        - esm
+      security:
+        - token: [ ]
       parameters:
         - name: study_id
           in: path
@@ -194,6 +216,10 @@ paths:
   /study/{study_id}/questionnaire/{questionnaire_id}/element/{element_id}:
     put:
       description: Updates an existing element in an ESM questionnaire.
+      tags:
+        - esm
+      security:
+        - token: [ ]
       parameters:
         - name: study_id
           in: path
@@ -230,6 +256,10 @@ paths:
           description: The questionnaire was not found.
     delete:
       description: Deletes an existing element from an ESM questionnaire.
+      tags:
+        - esm
+      security:
+        - token: [ ]
       parameters:
         - name: study_id
           in: path
@@ -257,6 +287,10 @@ paths:
   /study/{study_id}/questionnaire/{questionnaire_id}/trigger:
     post:
       description: Adds a new trigger to an existing ESM questionnaire.
+      tags:
+        - esm
+      security:
+        - token: [ ]
       parameters:
         - name: study_id
           in: path
@@ -288,6 +322,10 @@ paths:
   /study/{study_id}/questionnaire/{questionnaire_id}/trigger/{trigger_id}:
     put:
       description: Updates an existing trigger in an ESM questionnaire.
+      tags:
+        - esm
+      security:
+        - token: [ ]
       parameters:
         - name: study_id
           in: path
@@ -324,6 +362,10 @@ paths:
           description: The questionnaire was not found.
     delete:
       description: Deletes an existing trigger from an ESM questionnaire.
+      tags:
+        - esm
+      security:
+        - token: [ ]
       parameters:
         - name: study_id
           in: path
@@ -352,6 +394,8 @@ paths:
     post:
       description:
         Enrols a participant in a study through the enrolment key.
+      tags:
+        - enrolment
       requestBody:
         required: true
         content:
@@ -384,6 +428,8 @@ paths:
     post:
       description:
         Re-enrols a participant through their participant ID.
+      tags:
+        - enrolment
       parameters:
         - name: participant_id
           in: path
@@ -408,6 +454,8 @@ paths:
     post:
       description:
         Adds a new singular sensor reading to the system.
+      tags:
+        - reading
       requestBody:
         required: true
         content:
@@ -433,6 +481,8 @@ paths:
     post:
       description:
         Adds a batch of sensor readings to the system.
+      tags:
+        - reading
       requestBody:
         required: true
         content:
@@ -462,6 +512,8 @@ paths:
     post:
       description:
         Adds a file to a specific reading.
+      tags:
+        - reading
       parameters:
         - name: reading_id
           in: path
